--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,8 @@ authors = ["Jamie Coombes <jamie@example.com>"]
 license = "UNLICENSED"
 classifiers = ["Private :: Do Not Upload"]
 packages = [
-  { include = "obvs", from = "obvs" },
+  # { include = "obvs" },
+  { include = "patchscopes_pytorch" },
   # Add more packages here, e.g.
   # { include = "module_name", from = "obvs" },
 ]
@@ -20,6 +21,8 @@ python = "^3.11.7"
 ipykernel = "^6.28.0"
 torch = "^2.1.2"
 torchvision = "^0.16.2"
+transformers = "^4.37.1"
+nnsight = "^0.1.15"
 
 [tool.poetry.dev-dependencies]
 # Everything below here is alphabetically sorted
@@ -46,6 +49,10 @@ pre-commit = "^3.3.2"
 pylint = "^2.17.4"
 pytest = "^7.3.1"
 
+
+[tool.poetry.group.dev.dependencies]
+pyinstrument = "^4.6.2"
+scalene = "^1.5.34"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
