--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ torch = "^2.1.2"
 torchvision = "^0.16.2"
 transformers = "^4.37.1"
 nnsight = "^0.1.15"
+plotly = "^5.18.0"
 
 [tool.poetry.dev-dependencies]
 # Everything below here is alphabetically sorted
