--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ torchvision = "^0.16.2"
 transformers = "^4.37.1"
 nnsight = "^0.1.15"
 plotly = "^5.18.0"
+transformer-lens = "^1.14.0"
 
 [tool.poetry.dev-dependencies]
 # Everything below here is alphabetically sorted
