--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,6 +57,7 @@ pytest = "^7.3.1"
 [tool.poetry.group.dev.dependencies]
 pyinstrument = "^4.6.2"
 scalene = "^1.5.34"
+huggingface-hub = {extras = ["cli"], version = "^0.20.3"}
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
