--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ nnsight = "^0.1.17"
 plotly = "^5.18.0"
 transformer-lens = "^1.14.0"
 tiktoken = "^0.5.2"
+bitsandbytes = "^0.42.0"
 
 [tool.poetry.dev-dependencies]
 # Everything below here is alphabetically sorted
