--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ plotly = "^5.18.0"
 typer = "^0.9.0"
 kaleido = "0.2.1"
 fsspec = "2023.9.2"
+dataclasses-json = "^0.6.4"
 
 [tool.poetry.dev-dependencies]
 # Everything below here is alphabetically sorted
